[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causalai"
version = "0.1.0"
description = "Pearl's Causal Inference Framework for AI Conversations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "CausalAI Team" }
]
keywords = ["causal-inference", "do-calculus", "AI", "alignment", "conversations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=3.2",
    "pydantic>=2.0",
    "dowhy>=0.11",
    "dashscope>=1.0",
    "aiohttp>=3.9",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.30",
    "gradio>=4.0",
    "pyvis>=0.3",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.25",
    "websockets>=12.0",
]
storage = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]
physics = [
    "warp-lang>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.1",
    "black>=24.0",
]
all = [
    "causalai[ui,api,storage,physics,dev]",
]

[project.urls]
Homepage = "https://github.com/causalai/causalai"
Documentation = "https://causalai.readthedocs.io"
Repository = "https://github.com/causalai/causalai"

[project.scripts]
causalai = "causalai.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/causalai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
